kubernetes/apps/default/nextcloud/app/clientTrafficPolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: nextcloud-collabora
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: nextcloud-collabora
  path:
    escapedSlashesAction: KeepUnchanged
    disableMergeSlashes: true
