kubernetes/apps/default/nextcloud/app/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  annotations:
    external-dns.alpha.kubernetes.io/target: '${SECRET_PUBLIC_IP}'
    external-dns.alpha.kubernetes.io/hostname: 'cloud.${SECRET_DOMAIN}'
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'false'
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  hostnames:
    - cloud.${SECRET_DOMAIN}
  rules:
    - backendRefs: &backendRef
        - name: nextcloud
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
        - path:
            type: Exact
            value: /robots.txt
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/webfinger
      filters:
        - type: URLRewrite # TODO do better after https://github.com/kubernetes-sigs/gateway-api/issues/2177
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /index.php/.well-known/webfinger
      backendRefs: *backendRef
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/nodeinfo
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /index.php/.well-known/nodeinfo
      backendRefs: *backendRef
    - matches:
        - path:
            type: Exact
            value: /.well-known/host-meta
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /public.php?service=host-meta
      backendRefs: *backendRef
    - matches:
        - path:
            type: Exact
            value: /.well-known/host-meta.json
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /public.php?service=host-meta-json
      backendRefs: *backendRef
    # Block restricted paths
    - matches:
        - path:
            type: PathPrefix
            value: /build
        - path:
            type: PathPrefix
            value: /tests
        - path:
            type: PathPrefix
            value: /config
        - path:
            type: PathPrefix
            value: /lib
        - path:
            type: PathPrefix
            value: /3rdparty
        - path:
            type: PathPrefix
            value: /templates
        - path:
            type: PathPrefix
            value: /data
        - path:
            type: PathPrefix
            value: /autotest
        - path:
            type: PathPrefix
            value: /occ
        - path:
            type: PathPrefix
            value: /issue
        - path:
            type: PathPrefix
            value: /indie
        - path:
            type: PathPrefix
            value: /db_
        - path:
            type: PathPrefix
            value: /console
      backendRefs: [] # No backend = deny # TODO do better after https://github.com/kubernetes-sigs/gateway-api/issues/2826
